change width to 100 at quote section to prevent overflow" q

--- a/style.css
+++ b/style.css
@@ -93,7 +93,9 @@ flex-wrap: wrap;
     justify-content: space-between;
 }
 .quote {
-    width: 350px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
     font-style: italic;
     font-size: 25px;
     line-height: 1.6;
